--- a/app/views/editorial/articolo.html.erb
+++ b/app/views/editorial/articolo.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial => 'blocco_sidebar2' %>
+<%# render :partial => 'blocco_sidebar2' %>
 <h1 style="display:none">ARTICOLO DETTAGLIO DI <b>UNO SOLO</b> ARTICOLO</h1>
 <div class="fs-layout-cell fs-content clearfix">
   <article class="fs-post fs-article">
