--- a/app/views/editorial/_articoli.html.erb
+++ b/app/views/editorial/_articoli.html.erb
@@ -21,7 +21,8 @@
 
                     <div class="fs-image-caption-wrapper">
                       <%= if articolo.immagine_url.nil?
-                            '<h3>no image</h3>'
+                             image_tag('/images/commons/sections/'+ articolo.top_section.immagine )
+
                           else
                             image_tag(articolo.immagine_url, :alt => h(truncate(articolo.titolo, :length => 12)))
                           end
