--- a/app/views/editorial/_articolo_full.html.erb
+++ b/app/views/editorial/_articolo_full.html.erb
@@ -23,7 +23,9 @@
               <span class="fs-postcommentsicon"> Scrivi un commento </span>::<span class="fs-postcommentsicon"> Leggi i commenti </span>
             </div>
             <div class="fs-comments">
-              <span class="fs-postcommentsicon"> Condividi su Facebook </span>::<span class="fs-postcommentsicon">  Condividi su twitter </span>
+              <%= link_to image_tag('/images/ico/facebook64.png'), 'http://www.facebook.com/sharer.php?u='+request.fullpath, :target => :blank %>
+              <%= link_to image_tag('/images/ico/twitter64.png'), 'http://www.facebook.com/sharer.php?u='+request.fullpath, :target => :blank %>
+
             </div>
           </div> <p class="fs-riassunto-full">
           <%= articolo.riassunto %></p>
