--- a/app/views/editorial/_articoli.html.erb
+++ b/app/views/editorial/_articoli.html.erb
@@ -18,11 +18,16 @@
 
                     <div class="fs-image-caption-wrapper">
                       <%= if articolo.immagine_url.nil?
-                             image_tag('/images/commons/sections/'+ articolo.top_section.immagine )
-
+                                if FileTest.exist?("#{RAILS_ROOT}/public/images/commons/sections/#{articolo.top_section.immagine}")
+                                    image_tag("/images/commons/sections/#{articolo.top_section.immagine}" )
+                                else
+                                    image_tag("/images/commons/sections/no-img.jpg" )
+                                end
                           else
-                            image_tag(articolo.immagine_url, :alt => h(truncate(articolo.titolo, :length => 12)))
+                                  image_tag(articolo.immagine_url, :alt => h(truncate(articolo.titolo, :length => 25)))
                           end
+                          #   image_tag(articolo.immagine_url, :alt => h(truncate(articolo.titolo, :length => 25)))
+                         # end
                       %>
                       <% if articolo.se_protetto %>
                           <div class="fs-postmetadatafooter-ko">
