--- a/public/stylesheets/editorial.css
+++ b/public/stylesheets/editorial.css
@@ -1,125 +1,18 @@
-/* Created by ... */
-/* menu per l'itente in cima */
-#top-menu-fe {
+/* Utilizzare solo per media  media PRINT  */
+
+
+
+#fs-tramenu-wrapper, #navbar-container {
+    display: none;
+}
+
+.fs-sidebar1, .fs-menu2-nav, .fs-nav, .fs-header, .fs-menu2-hmenu, .fs-shapes,.fs-comments,.fs-footer,.fs-back,.fs-social,.fs-accessibility {
+    display: none;
+}
+
+.fs-content-layout .fs-sidebar1{ display: none !important;}
+.fs-riassunto-full,{
+    float: none;
     display: block;
-    color: #FAFFBD;
-    height: 1.8em;
-    font-size: 0.8em;
-    padding: 2px 2px 0 6px;
 }
-
-#top-menu-fe ul {
-    margin: 0;
-    padding: 0;
-}
-
-#top-menu-fe li {
-    float: right;
-    list-style-type: none;
-    margin: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
-    white-space: nowrap;
-}
-
-#top-menu-fe a {
-    color: #fff;
-    margin-right: 8px;
-    font-weight: bold;
-    display: inline-block;
-}
-
-#top-menu-fe #loggedas-fe {
-    float: right;
-    margin-right: 0.5em;
-    color: #fff;
-}
-
-#account {
-    float: right;
-}
-
-/* fine menu dell'utente */
-
-
-/*
-
-.newsticker-jcarousellite {
-    width: 100%;
-}
-
-.newsticker-jcarousellite ul li {
-    list-style: none;
-    display: block;
-    margin: 0 !important;
-    padding: 0 !important;
-    text-align: center;
-}
-
-.newsticker-jcarousellite .thumbnail {
-    float: left;
-    width: 100%;
-    height: 110px;
-
-}
-
-.newsticker-jcarousellite .info {
-
- width: 100%;
-    display: block;
-    margin-bottom: 10px;
-}
-
-.newsticker-jcarousellite {
-    width: 100%;
-}
-
-.newsticker-jcarousellite ul li {
-    list-style: none;
-    display: block;
-    margin: 0 !important;
-    padding: 0 !important;
-    text-align: center;
-}
-
-.newsticker-jcarousellite .thumbnail {
-    float: left;
-    width: 100%;
-    height: 110px;
-
-}
-
-.newsticker-jcarousellite .info {
- width: 100%;
-    display: block;
-
-    margin-bottom: 10px;
-}
-
-.newsticker-jcarousellite .info span.cat {
-    display: block;
-    font-size: 10px;
-    color: #808080;
-}
-
-#newsticker-wrap {
-    width: 100%;
-    background: #EAF4F5;
-    padding: 0;
-    font-size: 12px;
-    margin: 0 auto;
-}
-
-#newsticker-wrap a {
-    text-decoration: none;
-}
-
-#newsticker-wrap img {
-    border: 2px solid #FFFFFF;
-    margin: 0 auto;
-
-}
-
-.newsticker-jcarousellite ul li:before {
-    content: none !important;
-}
-*/
+.fs-postmetadata-full{float: right;}
