--- a/app/views/editorial/quesito_cerca.html.erb
+++ b/app/views/editorial/quesito_cerca.html.erb
@@ -1,4 +1,4 @@
-<h2><%=l(:poniquesito)%></h2>
+<h2><%=l(:quesito_nuovo)%></h2>
   In questa pagina:
   <ul> 
     <li>Un utente definisce un titolo</li>
