--- a/app/views/editorial/_articolo_full.html.erb
+++ b/app/views/editorial/_articolo_full.html.erb
@@ -4,7 +4,7 @@
           <div class="fs-art-sezione-full">&nbsp;<%= articolo.top_section %>&nbsp;::&nbsp;<%= articolo.section %></div>
           <div class="fs-postheader-full">      <%= @articolo.titolo %>  </div>
         </div>
-        <div style="width:100%; overflow:auto;">
+        <div style="width:100%;">
           <div class="fs-image-caption-wrapper-full">
             <%= if articolo.immagine_url.nil?
                   '<h3>no image</h3>'
@@ -13,65 +13,56 @@
                 end
             %>
           </div>
-
           <div class="fs-postmetadata-full">
             <div class="fs-author">
-            <div>  <%= gravatar_for(articolo.author) unless !articolo.author %><%= h articolo.author %>
-            </div>
+              <div>  <%= gravatar_for(articolo.author) unless !articolo.author %><%= h articolo.author %>
+              </div>
               <%# articolo.due_date %> <%= I18n.localize(articolo.due_date.to_date, :format => :mese_anno) %>
             </div>
-
-
-              <div class='fs-social'>
-                <div class='fs-social-fb '>
-                <script src="http://connect.facebook.net/it_IT/all.js#xfbml=1"></script><fb:like href="" layout="button_count" show_faces="false" width="450" font=""></fb:like>
-                </div>
-                <div class='fs-social-tw '>
-                  <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="fiscosport">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
-                </div>
-                <div class='fs-social-gp '>
-                  <!-- Place this tag where you want the +1 button to render. -->
+            <div class='fs-social'>
+              <div class='fs-social-fb '>
+                <script src="http://connect.facebook.net/it_IT/all.js#xfbml=1"></script>
+                <fb:like href="" layout="button_count" show_faces="false" width="450" font=""></fb:like>
+              </div>
+              <div class='fs-social-tw '>
+                <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="fiscosport">Tweet</a>
+                <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+              </div>
+              <div class='fs-social-gp '>
+                <!-- Place this tag where you want the +1 button to render. -->
                 <div class="g-plusone" data-size="medium" data-recommendations="false">
                   <!-- Place this tag after the last +1 button tag. -->
                   <script type="text/javascript">
-                    window.___gcfg = {lang: 'it'};
-                    (function() {
-                      var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-                      po.src = 'https://apis.google.com/js/plusone.js';
-                      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-                    })();
+                      window.___gcfg = {lang:'it'};
+                      (function () {
+                          var po = document.createElement('script');
+                          po.type = 'text/javascript';
+                          po.async = true;
+                          po.src = 'https://apis.google.com/js/plusone.js';
+                          var s = document.getElementsByTagName('script')[0];
+                          s.parentNode.insertBefore(po, s);
+                      })();
                   </script>
                 </div>
-                 </div>
               </div>
-            <div class='fs-accessibility'>
-
-	<div id="resize-box">
-		<a href="javascript:increaseFontSize()" id="increase">A<sup>+</sup></a> <a href="javascript:decreaseFontSize()" id="decrease">a<sup>-</sup></a>  --- <a href="javascript:eraseCookie('textsize')" >E<sup>-</sup></a>
-	</div>
-
-
-
+              <div class="fs-resize-box">
+                <a href="javascript:increaseFontSize()" id="increase" class="fs-resize-itm">A<sup>+</sup></a>
+                <a href="javascript:decreaseFontSize()" id="decrease" class="fs-resize-itm">a<sup>-</sup></a>
               </div>
-              <%# link_to image_tag('/images/ico/facebook64.png'), 'http://www.facebook.com/sharer.php?u='+request.fullpath, :target => :blank %>
-              <%# link_to image_tag('/images/ico/twitter64.png'), 'http://www.facebook.com/sharer.php?u='+request.fullpath, :target => :blank %>
-             <!-- <a href="https://twitter.com/share" class="twitter-share-button" data-via="FicoSportit" data-lang="it" data-size="large" data-count="none">Tweet</a>
-              <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-             -->
-
-          </div> <p class="fs-riassunto-full">
-          <%= h(smart_truncate(articolo.riassunto, 200)) %></p>
-
-
-        <br/>
+            </div>
+            <%# link_to image_tag('/images/ico/facebook64.png'), 'http://www.facebook.com/sharer.php?u='+request.fullpath, :target => :blank %>
+          </div>
+          <div class="fs-riassunto-full">
+            <%= h(smart_truncate(articolo.riassunto, 200)) %></div>
+          <br/>
         </div>
-        <div class="clearfix">&nbsp; <br/> </div>
+        <div class="clearfix">&nbsp; <br />&nbsp; <br /></div>
         <div class="fs-layout-cell layout-item-2">
           <div id="fs-articolo-full">
-          <%= @articolo.testo %>
+            <%= @articolo.testo %>
           </div>
         </div>
-        <%= link_to "Ritorna ...", '/editoriale/' + @articolo.section.top_section.top_menu.key + '/'+ @articolo.section.top_section.key, :class=> "fs-back" %>
+        <%= link_to "Ritorna ...", '/editoriale/' + @articolo.section.top_section.top_menu.key + '/'+ @articolo.section.top_section.key, :class => "fs-back" %>
         <div class="fs-comments">
           <span class="fs-postcommentsicon"> Scrivi un commento </span>::<span class="fs-postcommentsicon"> Leggi i commenti </span>
         </div>
