action status user

--- a/app/views/fees/email_fee.html.erb
+++ b/app/views/fees/email_fee.html.erb
@@ -3,13 +3,13 @@
     <%= render_menu :menu_fee_fs %>
   </div>
   In questa pagina:
-  <ul> 
-    <li>Tamplate delle email da rilancio definiti dentro il Setting</li>
+  <ul>
+    <li>Template delle email da rilancio definiti dentro il Setting</li>
     <li>Incorporare i dati dell'utente e propore HTML da invio</li>
     <li>Recipients: selezione multiselect tra i utenti - groups -  organismi associati (power user o tutti membri)</li>
     <li>Editor HTML</li>
     <li>AZIONE: INVIA</li>
-  </ul> 
+  </ul>
   <p>
     <%= link_to 'settings', email_fee_goto_settings_path %>
   </p>
